--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 
             </div>
         </div>
-        <script src="https://threejs.org/build/three.js"></script>
+        <script src="js/three.js"></script>
         <script src="js/OrbitControls.js"></script>
         
         <!-- Scripts for handling mincraft data -->
