Work on the correct output for VMF brushes

--- a/index.html
+++ b/index.html
@@ -50,12 +50,13 @@
         <script src="js/vmf.js"></script>
 
         <script>
-            /*s = new VMF("test");
+            s = new VMF("test");
             // Would need to push all blocks + position etc to VMF object. blocks may also be need to be styled based on what the block is (Stair) 
             s.addBlock(1, 5, 1, 32, 32, 32);
             s.addBlock(1, 7, 1, 32, 32, 32);
             console.log(s);
-            console.log(s.world_brush_data[0].getSide("l", "Wood"));*/
+            console.log(s.world_brush_data[0].getString(1));
+
             /*
                 Props: http://minecraft-ids.grahamedgecombe.com/api Provides a JSON list of all minecraft ids etc... (and related names to the correct images)
                 (http://minecraft-ids.grahamedgecombe.com/items.json)
